Registro e inicio de sesión con validaciones.